--- a/public/stylesheets/employee/admission3_1.css
+++ b/public/stylesheets/employee/admission3_1.css
@@ -21,22 +21,10 @@
     float:left;
     color : #444;
     font-weight : bold;
-    padding:4px 0 0 0;
+    padding:10px 0 0 0;
 }
 
-.text-input-bg1{
-    float:right;
-    background : #fff url(../../images/form_bg/text-input-bg.png) no-repeat;
-    height : 28px;
-    width : 230px;
-}
 
-.label-fields input {
-    background : transparent;
-    border : 0;
-    margin : 5px 0 0 10px;
-    width : 210px;
-}
 
 .text-input-bg1 select {
     background-color : #eee;
@@ -53,7 +41,7 @@
     font-family:arial;
     font-size:14px;
     font-weight:bold;
-    margin-left:270px;
+    margin-left:220px;
     margin-top:30px;
     padding:7px 10px;
     border:none;
@@ -74,19 +62,38 @@
     height: 1px;
     border: none;
 }
-#form-contents .label-field-pair {
-    height: auto;
-    padding-top: 3px;
-    width: 900px;
+.fee_category_scroll {
+-moz-background-inline-policy:continuous;
+-moz-border-radius:10px 10px 10px 10px;
+-webkit-background-inline-policy:continuous;
+-webkit-border-radius:10px 10px 10px 10px;
+background:none repeat scroll 0 0 #EEEEEE;
+border:1px solid #C6C6C6;
+height:86px;
+margin-left:210px;
+margin-top:-37px;
+margin-bottom:5px;
+max-height:100px;
+overflow:auto;
+padding:7px;
+width:275px;
 }
-.label-field-pair label {
-    color: #444444;
-    display: block;
-    float: left;
-    font-size: 14px;
-    font-weight: 800;
-    height: auto;
-    margin: 0 0 10px;
-    padding-top: 10px;
-    width: 244px;
+.sel-list {
+border-bottom:1px solid #DDDDDD;
+margin-bottom:2px;
+width:265px;
+}
+.each_batch {
+border-bottom:1px solid #DDDDDD;
+font-size:12px;
+overflow:auto;
+width:265px;
+}
+.necessary-field {
+    color : #f00;
+    font-size : 1.1em;
+}
+#necessary-field-notification {
+    font-weight : bold;
+    padding : 10px 0 30px 0;
 }
