--- a/public/stylesheets/rtl/employee/edit_additional_details.css
+++ b/public/stylesheets/rtl/employee/edit_additional_details.css
@@ -1,4 +1,3 @@
-
 #form-content{
     height:150px;
     width:500px;
@@ -11,10 +10,6 @@
     margin : 0 5px 10px 0;
 }
 
-#radio-buttons{
-padding: 13px 0 0 0;
-}
-
 #submit-button input{
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
@@ -23,10 +18,11 @@ padding: 13px 0 0 0;
     font-family:arial;
     font-size:14px;
     font-weight:bold;
-    margin:0px 210px;
+    margin:0px auto;
     float:right;
     margin-top:20px;
-    padding:7px 10px;
+    margin-right: 210px;
+    padding:7px 12px;
     border:none;
     text-align:center;
     width:auto;
@@ -44,7 +40,7 @@ padding: 13px 0 0 0;
     background : #EEF2FD;
     border-bottom:1px solid #BECFFB;
     color : #444;
-    height : 1.5em; width : 30em;
+    height : 1.5em; width : 34em;
     list-style-type : none;
     padding : 0.5em 5em 0 0;
 }
@@ -53,9 +49,54 @@ padding: 13px 0 0 0;
     background : #DFEAFF;
     border-bottom:1px solid #BECFFB;
     color : #444;
-    height : 1.5em; width : 30em;
+    height : 1.5em; width : 34em;
     list-style-type : none;
     padding : 0.5em 5em 0 0;
+}
+.label-checkbox-pair {
+    float: none;
+}
+.delete_button_img{
+    background:#fff url(../../images/buttons/delete_2.png) no-repeat;
+    display: block;
+    float: left;
+    height: 12px;
+    margin-top: 13px;
+    padding-right: 15px;
+    margin-left:130px;
+    color: #f00;
+    text-decoration: none;
+}
+.custom .add_button_img {
+    float: none;
+    margin-right: 210px;
+}
+.add_button_img {
+    float: right;
+    width: 110px;
+}
+.add_button_img {
+    background: none repeat scroll 0 0 transparent;
+    color: #008800;
+    display: inline;
+    float: none;
+    font-size: 13px;
+    height: 12px;
+    margin-right: 210px;
+    margin-top: 15px;
+    text-decoration: none;
+    width: 100px;
+}
+.label-field-pair1 input {
+    background: none repeat scroll 0 0 #EEEEEE;
+    border: 1px solid #C6C6C6;
+    height: 17px;
+    margin: 5px 10px 0 0;
+    padding: 5px;
+    width: 205px;
+}
+.text-input-bg select {
+    width: 217px;
 }
 
 #category-list li.heading {
@@ -71,19 +112,29 @@ padding: 13px 0 0 0;
 }
 #category-list li div.category-name {
     width : 350px;
+    font-size:13px;
+    font-weight:bold;
 }
 #category-list li div.category-edit,
 #category-list li div.category-delete {
     font-size : 0.9em;
     width : 50px;
 }
+#category-list li div.category-status {
+    font-size : 0.9em;
+    width : 64px;
+}
 #category-list li div a {
     color : #000;
+    text-decoration:none;
+    font-size:14px;
+}
+#category-list li div a:hover {
+    color : #d00;
+    text-decoration:underline;
 }
 
-.label-checkbox-pair {
-    padding: 0 10px 0 0;
-}
+
 
 .label-checkbox-pair  {
     height:40px;
@@ -100,4 +151,40 @@ padding: 13px 0 0 0;
     margin:0 0 10px;
     padding-top:3px;
     width:206px;
+}
+.user_button  {
+    padding: 8px 15px;
+    margin-top:20px;
+    margin-right:25px;
+    text-decoration: none;
+}
+#submit-button input:hover{
+    background:  #373B3F;
+}
+.category-up-down{
+    width : 20px;
+    float: left;
+    padding-left: 20px;
+    text-decoration: none;
+}
+.category-up-down a{
+    text-decoration: none;
+}
+#category-list li div .category-up-down a:hover{
+    text-decoration: none;
+}
+.inactive{
+    width : 20px;
+    float: left;
+    padding-left: 20px;
+    visibility: hidden;
+}
+#category-list .listheading {
+    background:none repeat scroll 0 0 #BECFFB;
+    border-bottom:2px solid #BECFFB;
+    color:#444444;
+    height:1.5em;
+    list-style-type:none;
+    padding:0.5em 1em 0 0;
+    width:38em;
 }
