--- a/app/views/student/_additional_fields.erb
+++ b/app/views/student/_additional_fields.erb
@@ -18,22 +18,32 @@
 #under the License. -%>
 
 <ul id="category-list">
-<% unless @additional_details.empty? %>
-  <li class="heading"> <%= t('field_name') %></li>
-    <%- @additional_details.each do |c| -%>
-      <li class="list<%=cycle('odd', 'even')%>">
-        <div class="category-name"><%= c.name %></div>
-         <% if(c.status == true) %>
-        <div class="category-status"> <%= t('active') %></div>
-        <% else %>
-        <div class="category-status"> <%= t('inactive') %></div>
-        <% end %>
-        <div class="category-edit"><%= link_to "#{t('edit_text')}", {:action => "edit_additional_details", :id=>c.id} %></div>
-        <div class="category-edit"><%= link_to "#{t('delete_text')}", {:action => "delete_additional_details", :id=>c.id}, :confirm => "#{t('delete_confirm_msg')}" %></div>
-      </li>
-     <% end %>
-
+  <% unless @additional_details.empty? and @inactive_additional_details.empty? %>
+    <% unless @additional_details.empty? %>
+      <li class="listheading"><div class="category-name"><%= t('active_fields') %></div></li>
+      <%- @additional_details.each_with_index do |c,i| -%>
+        <li class="list<%=cycle('odd', 'even')%>">
+          <div class="category-name"><%= c.name %>
+            <span class="category-up-down <%= "inactive" if i==0 %>"><%= link_to_remote "▲",:url=>{:action=>"change_field_priority",:order=>"up",:id=>c.id} %></span>
+            <span class="category-up-down <%= "inactive" if i+1==@additional_details.count%>"><%= link_to_remote "▼",:url=>{:action=>"change_field_priority",:order=>"down",:id=>c.id} %></span>
+          </div>
+          <div class="category-edit"><%= link_to "#{t('edit_text')}", {:action => "edit_additional_details", :id=>c.id} %></div>
+          <div class="category-edit"><%= link_to "#{t('delete_text')}", {:action => "delete_additional_details", :id=>c.id}, :confirm => "#{t('delete_confirm_msg')}" %></div>
+        </li>
+      <% end %>
+    <% end %>
+    <% unless @inactive_additional_details.empty? %>
+      <li class="listheading"><div class="category-name"> <%= t('inactive_fields') %></div></li>
+      <%- @inactive_additional_details.each do |c| -%>
+        <li class="list<%=cycle('odd', 'even')%>">
+          <div class="category-name"><%= c.name %></div>
+          <div class="category-edit"><%= link_to "#{t('edit_text')}", {:action => "edit_additional_details", :id=>c.id} %></div>
+          <div class="category-edit"><%= link_to "#{t('delete_text')}", {:action => "delete_additional_details", :id=>c.id},:confirm=>"#{t('delete_confirm_msg')}" %></div>
+        </li>
+      <% end %>
+    <% end %>
   <% else %>
-<p class="flash-msg"><%= t('no_additional_details') %></p>
+    <p class="flash-msg"><%= t('no_additional_details') %></p>
   <% end %>
 </ul>
+
