--- a/app/views/student/admission4.erb
+++ b/app/views/student/admission4.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("/images/admission/admission_page_logo.jpg") %>
+  <%= image_tag("/images/admission/admission_page_logo.jpg") %>
   <h1><%= t('admission') %></h1>
   <h3><%= t('step4') %></h3>
 </div>
@@ -26,25 +26,71 @@
 <div id="page-yield">
 
   <% unless flash[:notice].nil? %>
-  <p class="flash-msg"> <%= flash[:notice] %> </p>
+    <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-
-
   <% form_for :student_additional_details do |a| %>
+    <%= error_messages_for 'student' %>
   <%#= error_messages_for 'employee_bank_details' %>
-
-      <div id="form-contents">
+    <% i=0 %>
+    <div id="form-contents">
       <span class="span-sub-heading"><%= t('additional_detail') %></span>
       <hr class="sub-heading"></hr>
-          <% @additional_fields.each do |additional| %>
-          <div class="label-field-pair">
-            <label><%= additional.name %></label>
-            <div class="text-input-bg"><%= a.text_field :additional_info,:index => additional.id %></div>
-            <div class="extender"></div>
-          </div>
+      <div id="necessary-field-notification"> <%= t('legend1') %> <span class="necessary-field">*</span> <%= t('legend2') %></div>
+      <% @additional_fields.each do |additional| %>
+        <% prev_record = @student_additional_details.find_by_additional_field_id(additional.id) %>
+        <% unless prev_record.nil? %>
+          <% if additional.input_type=="has_many" %>
+            <% prev_value = prev_record.additional_info.split(", ") %>
+          <% else %>
+            <% prev_value = prev_record.additional_info %>
           <% end %>
-      </div>
+        <% end %>
+        <% input_val = ((params[:student_additional_details].present? and params[:student_additional_details][additional.id.to_s.to_sym].present? and params[:student_additional_details][additional.id.to_s.to_sym][:additional_info].present?) ? (params[:student_additional_details][additional.id.to_s.to_sym][:additional_info]) : (prev_value.present? ? prev_value : nil))%>
+        <% if additional.input_type=="belongs_to" %>
+          <div class="label-field-pair">
+            <label><%= additional.name %>
+              <% if additional.is_mandatory %>
+                <span class="necessary-field">*</span>
+              <% end %>
+            </label>
+            <div class="text-input-bg"><%= select_tag "student_additional_details[#{additional.id}][additional_info]", options_for_select(additional.student_additional_field_options.map{|b| [b.field_option,b.field_option]}, input_val)%></div>
+          </div>
+        <% elsif additional.input_type=="has_many" %>
+          <div class="grades">
+            <div class="label-field-pair">
+              <label><%= additional.name %>
+                <% if additional.is_mandatory %>
+                  <span class="necessary-field">*</span>
+                <% end %></label>
+            </div>
+            <div class="fee_category_scroll">
+              <div class="sel-list">
+                <%= t('select') %>: <%= link_to_function t('all'), "$$('input.check#{i}').each(function(checkbox) { checkbox.checked = true; });" %>,
+                <%= link_to_function t('none'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
+              </div>
+              <% additional.student_additional_field_options.each do |k| %>
+                <div class="each_batch">
+                  <%= check_box_tag "student_additional_details[#{additional.id}][additional_info][]", k.field_option,(!(input_val.nil?) and input_val.include?(k.field_option)), :class=>"batches_box check#{i}" %> <label><%= k.field_option %></label>
+                </div>
+              <% end %>
+            </div>
+          </div>
+          <% i+=1 %>
+        <% else %>
+          <div class="label-field-pair">
+            <label><%= additional.name %>
+              <% if additional.is_mandatory %>
+                <span class="necessary-field">*</span>
+              <% end %></label>
 
+            <div class="text-input-bg"><%= text_field_tag "student_additional_details[#{additional.id}][additional_info]", input_val %></div>
+          </div>
+        <% end %>
+        <div class="extender"></div>
+
+      <% end %>
+
+    </div>
     <div class="save-proceed-button">
       <%= submit_tag "► #{t('save_and_proceed')}" %>
     </div>
