fixes #3732 [Show Full course name in pdf of attendance report ]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3946 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/attendance_reports/report_pdf.erb
+++ b/app/views/attendance_reports/report_pdf.erb
@@ -41,6 +41,7 @@
           <% else %>
             <h4> <%= "#{t('total_no_of_wrkng_hours')} = " + @academic_days.to_s %></h4>
           <% end %>
+          <h4><%= t('course_name') %> = <%= @students.first.batch.course.full_name %></h4>
         </div>
       </center>
     </div>
