--- a/public/stylesheets/rtl/timetable/teachers_timetable.css
+++ b/public/stylesheets/rtl/timetable/teachers_timetable.css
@@ -4,20 +4,21 @@
     border-radius: 8px;
 }
 #teacher{
-border-left: none;
-width: 150px;
-border-top-left-radius: 0px;
-border-bottom-left-radius: 0px;
+    border-left: none;
+    width: 150px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
 }
 #timetable{
-border-top-right-radius: 0px;
-border-bottom-right-radius: 0px;
-border-right: none;
-padding-right: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-right: none;
+    padding-right: 0px;
 }
 #timetable-container{
-/*    height: 450px;*/
-/*    overflow-y: scroll;*/
+    font-weight: bold;
+    /*    height: 450px;*/
+    /*    overflow-y: scroll;*/
 }
 .batch{
     height: 80px;
@@ -28,9 +29,10 @@ padding-right: 0px;
     height: 30px;
     font-size: 12px;
 
-} 
+}
 #timetable td{
     text-align: center;
+    min-width: 70px;
 }
 #period-count{
     background-color: #fff;
@@ -50,9 +52,11 @@ padding-right: 0px;
     font-weight: bold;
     font-size: 12px;
     background-color: #fff;
+    width: 70px;
+    max-width: 70px;
 }
 #table-viewer{
-/*    height:480px;*/
+    /*    height:480px;*/
     margin-right: 0px;
     overflow-x: scroll;
     width: 810px;
@@ -61,8 +65,61 @@ padding-right: 0px;
 .box{
     width: 95%;
     margin: 0 auto;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 .employee_list{
     float: right;
+}
+.tte .entries_wrapper{
+    display: none;
+    margin-right: -14px;
+    width: 100px;
+    max-width: 100px;
+    min-width: 100px;
+    height: 95px;
+    max-height: 95px;
+    min-height: 95px;
+    position:absolute;
+    z-index: 2000;
+    margin-top: -23px;
+    cursor: pointer;
+}
+.tte:hover .entries_wrapper{
+    display: block;
+}
+.tte:hover .entries_wrapper .entries{
+    background-color: white;
+    border: 4px solid #C3D9FF;
+    padding: 5px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    padding-top: 10px;
+    font-weight: bold;
+    font-size: 12px;
+    font-variant: small-caps;
+    overflow-x:hidden;
+    overflow-y:auto;
+    height: 95px;
+    max-height: 95px;
+    min-height: 95px;
+}
+.add_sym{
+    font-weight: bold;
+    font-size: 14px;
+}
+.batch_code{
+    float: right;
+    width: 100%;
+    color: black;
+    font-weight: normal;
+}
+.sub_name{
+    float: right;
+    width: 100%;
+    color: #444444;
+}
+.gap{
+    float: right;
+    width: 100%;
+    height: 10px;
 }
