--- a/public/stylesheets/timetable/employee_timetable.css
+++ b/public/stylesheets/timetable/employee_timetable.css
@@ -2,24 +2,24 @@
     padding: 10px;
     background-color: #C3D9FF;
     border-radius: 8px;
-/*    border: 1px solid #BB0000;*/
+    /*    border: 1px solid #BB0000;*/
 }
 #teacher{
-border-right: none;
-width: 150px;
-border-top-right-radius: 0px;
-border-bottom-right-radius: 0px;
+    border-right: none;
+    width: 150px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 #timetable{
-border-top-left-radius: 0px;
-border-bottom-left-radius: 0px;
-/*border-left: none;*/
-padding-left: 0px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    /*border-left: none;*/
+    padding-left: 0px;
 }
 #timetable-container{
     font-weight: bold;
-/*    height: 450px;*/
-/*    overflow-y: scroll;*/
+    /*    height: 450px;*/
+    /*    overflow-y: scroll;*/
 }
 .batch{
     height: 66px;
@@ -38,7 +38,7 @@ padding-left: 0px;
 }
 #period-count{
     background-color: #fff;
-/*    height: 66px;*/
+    /*    height: 66px;*/
     font-size: 12px;
     font-weight: bold;
 }
@@ -58,9 +58,9 @@ padding-left: 0px;
     max-width: 150px;
 }
 #table-viewer{
-/*    height:480px;*/
+    /*    height:480px;*/
     margin-left: 0px;
-/*    overflow-x: auto;*/
+    /*    overflow-x: auto;*/
     width: 810px;
     float: left;
 }
@@ -71,14 +71,20 @@ padding-left: 0px;
 }
 .tte .entries_wrapper{
     display: none;
-    margin-left: 90px;
-    min-width: 150px;
+    margin-left: -14px;
+    width: 100px;
+    max-width: 100px;
+    min-width: 100px;
+    height: 95px;
+    max-height: 95px;
+    min-height: 95px;
+    position:absolute;
+    z-index: 2000;
+    margin-top: -23px;
+    cursor: pointer;
 }
 .tte:hover .entries_wrapper{
     display: block;
-    position: relative;
-    z-index: 2000;
-    height: 0;
 }
 .tte:hover .entries_wrapper .entries{
     background-color: white;
@@ -90,4 +96,29 @@ padding-left: 0px;
     font-weight: bold;
     font-size: 12px;
     font-variant: small-caps;
+    overflow-x:hidden;
+    overflow-y:auto;
+    height: 95px;
+    max-height: 95px;
+    min-height: 95px;
+}
+.add_sym{
+    font-weight: bold;
+    font-size: 14px;
+}
+.batch_code{
+    float: left;
+    width: 100%;
+    color: black;
+    font-weight: normal;
+}
+.sub_name{
+    float: left;
+    width: 100%;
+    color: #444444;
+}
+.gap{
+    float: left;
+    width: 100%;
+    height: 10px;
 }
