--- a/public/stylesheets/timetable/teachers_timetable.css
+++ b/public/stylesheets/timetable/teachers_timetable.css
@@ -72,14 +72,20 @@
 }
 .tte .entries_wrapper{
     display: none;
-    margin-left: 90px;
+    margin-left: -14px;
+    width: 100px;
+    max-width: 100px;
     min-width: 100px;
+    height: 95px;
+    max-height: 95px;
+    min-height: 95px;
+    position:absolute;
+    z-index: 2000;
+    margin-top: -23px;
+    cursor: pointer;
 }
 .tte:hover .entries_wrapper{
     display: block;
-    position: relative;
-    z-index: 2000;
-    height: 0;
 }
 .tte:hover .entries_wrapper .entries{
     background-color: white;
@@ -91,4 +97,29 @@
     font-weight: bold;
     font-size: 12px;
     font-variant: small-caps;
+    overflow-x:hidden;
+    overflow-y:auto;
+    height: 95px;
+    max-height: 95px;
+    min-height: 95px;
+}
+.add_sym{
+    font-weight: bold;
+    font-size: 14px;
+}
+.batch_code{
+    float: left;
+    width: 100%;
+    color: black;
+    font-weight: normal;
+}
+.sub_name{
+    float: left;
+    width: 100%;
+    color: #444444;
+}
+.gap{
+    float: left;
+    width: 100%;
+    height: 10px;
 }
