--- a/app/views/subjects/_new.html.erb
+++ b/app/views/subjects/_new.html.erb
@@ -44,6 +44,11 @@
       <div class="label-container"><label><%= t('max_weekly_class') %></label></div>
       <div class="input-container"> <%= f.text_field :max_weekly_classes %></div>
     </div>
+
+    <div class="label-field-pair">
+      <div class="label-container"><label><%= t('amount') %></label></div>
+      <div class="input-container"> <%= f.text_field :amount %></div>
+    </div>
     <% if @batch and (@batch.cwa_enabled? or @batch.gpa_enabled?) %>
       <div class="label-field-pair">
         <div class="label-container"><label>Credit Hours</label></div>
